--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -10,6 +10,7 @@ html
         link( rel="stylesheet", type="text/css", href="/public/stylesheets/main.css" )
     body
         include ../partials/header
+        include ../partials/errorMessage
         main
             block content
         include ../partials/footer
