--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,1 +1,8 @@
 header
+    nav
+        a(href="/") IndigoSay
+        ul
+            li
+                a(href="/authors") Authors
+            li
+                a(href="/authors/new") Add Authors
