--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -6,3 +6,7 @@ header
                 a(href="/authors") Authors
             li
                 a(href="/authors/new") Add Authors
+            li
+                a(href="/books") Books
+            li
+                a(href="/books/new") Add book
