--- a/views/books/_forms_fields.pug
+++ b/views/books/_forms_fields.pug
@@ -17,7 +17,7 @@ div
     input(type="number" name='pageCount' min='1' value=book.pageCount)
 div
     label Cover
-    input(type="file" name='cover')
+    input(type="file" name='cover' class='filepond')
 div
     label Description
     textarea(name="description")= book.description
