--- a/views/books/new.pug
+++ b/views/books/new.pug
@@ -2,7 +2,7 @@ extends ../layouts/main
 
 block content
     h2 New Book
-    form(action='/books' method='POST' enctype='multipart/form-data')
+    form(action='/books' method='POST')
         include _forms_fields
         a(href="/books") Cancel
         button(type='submit') Create
