--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -7,7 +7,14 @@ html
         meta(name="HandheldFriendly",content="true")
         //- title #{pageTitle} | #{siteName}
         //- title #{siteName}
+        link( rel="stylesheet", type="text/css", href="https://unpkg.com/filepond/dist/filepond.css" )
+        link( rel="stylesheet", type="text/css", href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css" )
         link( rel="stylesheet", type="text/css", href="/public/stylesheets/main.css" )
+        script(src="https://unpkg.com/filepond-plugin-file-encode/dist/filepond-plugin-file-encode.js" defer)
+        script(src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js" defer)
+        script(src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js" defer)
+        script(src="https://unpkg.com/filepond/dist/filepond.js" defer)
+        script(src="/public/js/fileUpload.js" defer)
     body
         include ../partials/header
         include ../partials/errorMessage
