--- a/views/authors/page.pug
+++ b/views/authors/page.pug
@@ -10,4 +10,6 @@ block content
     if booksByAuthor.length > 0
         h2 Books By Author
         each book in booksByAuthor
-            img(width=100 height=150 src=book.coverImagePath, alt="")
+            a(href=`/books/${book.id}`)
+                img(height=150 with=100 src=book.coverImagePath)
+            a.book(href=`/books/${book.id}`)= book.title
