--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -15,5 +15,6 @@ block content
         button(type='submit') Search
     div
         each book in books
-            img(height=150 with=100 src=book.coverImagePath)
-            .book= book.title
+            a(href=`/books/${book.id}`)
+                img(height=150 with=100 src=book.coverImagePath)
+            a.book(href=`/books/${book.id}`)= book.title
