--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,12 +1,12 @@
 header
-    nav
-        a(href="/") IndigoSay
+    nav.header_nav
+        a.header_title(href="/") IndigoSay
         ul
-            li
+            li.header_link
                 a(href="/authors") Authors
-            li
+            li.header_link
                 a(href="/authors/new") Add Authors
-            li
+            li.header_link
                 a(href="/books") Books
-            li
+            li.header_link
                 a(href="/books/new") Add book
