--- a/views/authors/index.pug
+++ b/views/authors/index.pug
@@ -10,7 +10,8 @@ block content
     br
     each author in authors
         .author= author.name
-        a(href=`/authors/${author.id}`) View
-        a(href=`/authors/${author.id}/edit`) Edit
-        +deleteForm(`/authors/${author.id}?_method=DELETE`)
+        .btn-row
+            a.btn.btn_primary(href=`/authors/${author.id}`) View
+            a.btn.btn_primary(href=`/authors/${author.id}/edit`) Edit
+            +deleteForm(`/authors/${author.id}?_method=DELETE`)
         
