--- a/views/books/page.pug
+++ b/views/books/page.pug
@@ -5,7 +5,7 @@ block content
     h2= book.title
     img(height=150 width=100 src=book.coverImagePath)
     div Author: 
-        = book.author.name
+        a(href=`/authors/${book.author.id}`)= book.author.name
     div Publish Date: 
         = book.publishDate.toDateString()
     div Page Count: 
