--- a/views/index.pug
+++ b/views/index.pug
@@ -1,9 +1,8 @@
 extends layouts/main 
+include mixins/bookCard
 
 block content
     h2 Recently Added
     div
         each book in books
-            a(href=`/books/${book.id}`)
-                img(height=150 with=100 src=book.coverImagePath)
-            a.book(href=`/books/${book.id}`)= book.title
+            +bookCard(book)
