--- a/views/mixins/deleteForm.pug
+++ b/views/mixins/deleteForm.pug
@@ -1,3 +1,3 @@
 mixin deleteForm(url)
     form(method='POST' action=url)
-        button(type="submit") Delete
+        button.btn.btn_danger(type="submit") Delete
