--- a/views/authors/_forms_fields.pug
+++ b/views/authors/_forms_fields.pug
@@ -1,2 +1,4 @@
-label Name
-input(type="text" name='name' value= author ? author.name : '')
+.form_row
+    .form_item
+        label Name
+        input(type="text" name='name' value= author ? author.name : '')
