--- a/views/authors/new.pug
+++ b/views/authors/new.pug
@@ -4,5 +4,6 @@ block content
     h2 New Author
     form(action='/authors' method='POST')
         include _forms_fields
-        a(href="/authors") Cancel
-        button(type='submit') Create
+        .form_row.form_row_end.btn_row
+            a.btn.btn_danger(href="/authors") Cancel
+            button.btn.btn_primary(type='submit') Create
