--- a/views/books/edit.pug
+++ b/views/books/edit.pug
@@ -4,5 +4,6 @@ block content
     h2 Edit Book
     form(action=`/books/${book.id}?_method=PUT` method='POST')
         include _forms_fields
-        a(href="/books") Cancel
-        button(type='submit') Update
+        .form_row.form_row_end.btn_row
+            a.btn.btn_danger(href="/books") Cancel
+            button.btn.btn_primary(type='submit') Update
