--- a/public/stylesheets/variables.css
+++ b/public/stylesheets/variables.css
@@ -4,5 +4,6 @@
     --color-background-light: rgb(var(--color-base-hue), 173, 255);
     --color-danger-hue-offset: 180;
     --color-danger-hue: calc(var(--color-base-hue) - var(--color-danger-hue-offset));
+    --font-color-light: rgb(208, 252, 255);
 }
 
