--- a/views/authors/edit.pug
+++ b/views/authors/edit.pug
@@ -4,5 +4,6 @@ block content
     h2 Edit Author
     form(action=`/authors/${author.id}?_method=PUT` method='POST')
         include _forms_fields
-        a(href=`/authors/${author.id}`) Cancel
-        button(type='submit') Update
+        .form_row.form_row_end.btn_row
+                a.btn.btn_danger(href=`/authors/${author.id}`) Cancel
+                button.btn.btn_primary(type='submit') Update
