--- a/views/books/_forms_fields.pug
+++ b/views/books/_forms_fields.pug
@@ -1,23 +1,27 @@
-div
-    label Title
-    input(type="text" name='title' value=book.title)
-div
-    label Author
-    select(name='author')
-        each author in authors
-            if author.id === book.author
-                option(label=author.name value=author.id selected)
-            else
-                option(label=author.name value=author.id)
-div
-    label Publish Date
-    input(type="date" name='publishDate' value= (book.publishDate == null) ? "" : book.publishDate.toISOString().split('T')[0])
-div
-    label Page Count
-    input(type="number" name='pageCount' min='1' value=book.pageCount)
-div
-    label Cover
-    input(type="file" name='cover' class='filepond')
-div
-    label Description
-    textarea(name="description")= book.description
+.form_row
+    .form_item
+        label Title
+        input(type="text" name='title' value=book.title)
+    .form_item
+        label Author
+        select(name='author')
+            each author in authors
+                if author.id === book.author
+                    option(label=author.name value=author.id selected)
+                else
+                    option(label=author.name value=author.id)
+.form_row
+    .form_item
+        label Publish Date
+        input(type="date" name='publishDate' value= (book.publishDate == null) ? "" : book.publishDate.toISOString().split('T')[0])
+    .form_item
+        label Page Count
+        input(type="number" name='pageCount' min='1' value=book.pageCount)
+
+.form_row
+    .form_item.form_item_no_grow
+        label Cover
+        input(type="file" name='cover' class='filepond')
+    .form_item
+        label Description
+        textarea(name="description")= book.description
