--- a/views/books/index.pug
+++ b/views/books/index.pug
@@ -4,16 +4,19 @@ include ../mixins/bookCard
 block content
     h2 Search Books
     form(action='/books' method='GET')
-        div
-            label Title
-            input(type="text" name='title' value=searchOptions.title)
-        div
-            label Published After
-            input(type="date" name='publishedAfter' value=searchOptions.publishedAfter)
-        div
-            label Published Before
-            input(type="date" name='publishedBefore' value=searchOptions.publishedBefore)
-        button(type='submit') Search
+        .form_row
+            .form_item
+                label Title
+                input(type="text" name='title' value=searchOptions.title)
+        .form_row
+            .form_item
+                label Published After
+                input(type="date" name='publishedAfter' value=searchOptions.publishedAfter)
+            .form_item
+                label Published Before
+                input(type="date" name='publishedBefore' value=searchOptions.publishedBefore)
+        .form_row.form_row_end.btn_row
+            button.btn.btn_primary(type='submit') Search
     div
         each book in books
             +bookCard(book)
