--- a/views/books/new.pug
+++ b/views/books/new.pug
@@ -4,5 +4,6 @@ block content
     h2 New Book
     form(action='/books' method='POST')
         include _forms_fields
-        a(href="/books") Cancel
-        button(type='submit') Create
+        .form_row.form_row_end.btn_row
+            a.btn.btn_danger(href="/books") Cancel
+            button.btn.btn_primary(type='submit') Create
