--- a/views/books/_forms_fields.pug
+++ b/views/books/_forms_fields.pug
@@ -21,7 +21,7 @@
 .form_row
     .form_item.form_item_no_grow
         label Cover
-        input(type="file" name='cover' class='filepond')
+        input(type="file" name='cover' class='book_cover filepond')
     .form_item
         label Description
         textarea(name="description")= book.description
