--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -9,7 +9,7 @@ html
         //- title #{siteName}
         link( rel="stylesheet", type="text/css", href="https://unpkg.com/filepond/dist/filepond.css" )
         link( rel="stylesheet", type="text/css", href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css" )
-        link( rel="stylesheet", type="text/css", href="/public/stylesheets/main.css" )
+        link( id='main_css' rel="stylesheet", type="text/css", href="/public/stylesheets/main.css" )
         script(src="https://unpkg.com/filepond-plugin-file-encode/dist/filepond-plugin-file-encode.js" defer)
         script(src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js" defer)
         script(src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js" defer)
