--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,6 +2,8 @@
 @import 'header.css';
 @import 'buttons.css';
 @import 'form.css';
+@import 'author.css';
+@import 'book.css';
 
 :root {
     font-size: medium;
@@ -28,4 +30,8 @@ body {
 
 h2 {
     font-size:  2rem; 
+}
+
+.error_message {
+    color: hsl(var(--color-danger-hue), 100%, 50%)
 }
