--- a/views/authors/edit.pug
+++ b/views/authors/edit.pug
@@ -1,4 +1,5 @@
 extends ../layouts/main 
+include ../mixins/csurf
 
 block content
     h2 Edit Author
@@ -6,4 +7,5 @@ block content
         include _forms_fields
         .form_row.form_row_end.btn_row
                 a.btn.btn_danger(href=`/authors/${author.id}`) Cancel
+                +csurf(csrf)
                 button.btn.btn_primary(type='submit') Update
