--- a/views/books/edit.pug
+++ b/views/books/edit.pug
@@ -1,4 +1,5 @@
 extends ../layouts/main 
+include ../mixins/csurf
 
 block content
     h2 Edit Book
@@ -6,4 +7,5 @@ block content
         include _forms_fields
         .form_row.form_row_end.btn_row
             a.btn.btn_danger(href="/books") Cancel
+            +csurf(csrf)
             button.btn.btn_primary(type='submit') Update
